@@ -7,6 +7,9 @@
      [log.c]
      set fatal_cleanups to NULL in fatal_remove_all_cleanups(); 
      dtucker@zip.com.au
+   - markus@cvs.openbsd.org 2003/01/12 16:57:02
+     [progressmeter.c]
+     allow WARNINGS=yes; ok djm@
 
 20030113
  - (djm) Rework openbsd-compat/setproctitle.c a bit: move emulation type
@@ -1010,4 +1013,4 @@
      save auth method before monitor_reset_key_state(); bugzilla bug #284;
      ok provos@
 
-$Id: ChangeLog,v 1.2568 2003/01/14 11:22:43 djm Exp $
+$Id: ChangeLog,v 1.2569 2003/01/14 11:23:23 djm Exp $
